tests/invalid/syntax/as_cast_missing_type.nyx
// INVALID: as-cast missing target type
// Expected parse error: type annotation required after 'as'
func bad(x: i32) -> ok
    let y = x as
    pass
